added python script for search all possible partitions

--- a/search_all_possible_partitions.ipynb
+++ b/search_all_possible_partitions.ipynb
@@ -152,7 +152,7 @@
     }
    ],
    "source": [
-    "%%time\n",
+    "# %%time\n",
     "best_mdl = initial_mdl\n",
     "best_partition = modules\n",
     "best_i = 0\n",
